--- a/index.html
+++ b/index.html
@@ -170,31 +170,9 @@
 
     <section class="for-full-back " id="Parallax-one">
         <div class="container">
-
-            <div class="row text-center for-parallax-one">
-                <div class="col-md-6 ">
-                    <h3></h3>
-                    <h4>
-                        <strong> 
-                        </strong>
-                    </h4>
-                </div>
-                <div class="col-md-6 ">
-                    <h3></h3>
-                    <h4>
-                        <strong>
-                        </strong>
-                    </h4>
-                </div>
-            </div>
-
-
         </div>
     </section>
     <!--./parallax one-->
-    <!--End words Section-->
-
-    <!-- Pricing (lol)Section -->
 
     <section class="for-full-back color-white " id="dots">
         <div class="container">
@@ -208,7 +186,7 @@
             <div class="row text-center">
                 <svg id="my_dataviz" height=100 width=1000></svg>
                 <div id="node-graph"></div>
-                <h4>Drag and drop the nodes to see how they connect!</h4>
+                <h3>Drag and drop the nodes to see how they connect!</h3>
             </div>
 
 
@@ -220,6 +198,7 @@
 
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2 ">
+                <p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
                 </div>
 
             </div>
@@ -232,29 +211,153 @@
     <section class="for-full-back color-white " id="story">
         <div class="container">
             <div class="row text-center">
-                <div class="col-md-8 col-md-offset-2">
-                    <h1>My Story</h1>
-                    <h3><p>very cheese... March 2020. A world shutting down. A twice-forwarded email pleaded my department for COVID-19 testing volunteers. Despite just passing the bioengineering PhD qualification exam, I could not sit tight and watch a public health train wreck unfold without doing something. I answered the call. The evening of my exam, I biked over to UW Medical Center to join the Specimen Processing Services and prepare COVID-19 samples for testing. Foege may be closed, but I returned to work, one swab at a time! [summary of experience at SPS, 4-5 sentences.] [DISCOVERY MINDSET: I learned new things that I could take to my research.] [slowly transitioned to researching part time in lab as well, and the investigation required me to return to Foege for full-time work.]</p>
-                    <p>[aptamers that bind the spike protein of SARS-CoV-2, the virus that causes COVID-19… basic summary explaining the idea] [manuscript published] [chosen to present the work at a conference] [current directions: rapid test, what it does, advantages it could bring] All the while, I took under my wing a then-sophomore, Joey, to help support my work. [mentoring challenges, things I learned, good points?]</p>
-                    <p>Just as I mentored Joey at the bench, I also trained Camille, a current junior at UW, as my shop assistant for my online store. [explain the store I created from scratch, what we make] [inclusivity, we are both young LGBT women in a field primarily dominated by men?]</p>
-                    <p>The online store helps fund my little brother’s husky experience. Robin is a senior at UW … Pay for his housing and every grocery trip and food outing we have together to give him the freedom to choose his own future, reduce any student debt that may weigh his choice of future directions, shield him from "tiger mom” judgement on his choice of major and career.
-                    <p>My husky experience doesn’t end at the bioengineering department; I’m also deeply involved in two communities at UW, the Kendo Club and the competitive Pokémon scene. </p>
-                    Kendo Club at UW. [kendo/iaido summary] [kendo rank] [online practices] [helped with making items for the fall club fair, give rides to undergrads who need it? Teach newer students?] [culminating in obtaining rank in iaido?] [wrap up]
-                    <p>I volunteer my time to organize and host Pokémon events for the UW and Seattle community and beyond. [Pokémon summary] [local events volunteering, MOX boarding house, Tabletop Village] [physical events travel judge] [professor university] [inclusivity mention? Mentoring mention?] [online Player’s Cup] [wrap up]</p>
-                    As my fellow huskies wait to cross swords and battle with Pokémon in-person, I hope to accelerate our return to normal by conducting and researching COVID-19 tests. </p>
-                 </h3>
-
+                <div class="col-md-12">
+                    <h1>My Story: COVID-19 Testing</h1>
+                    <div class="col-md-8">
+                    <h4><p>March 2020: a world shutting down. An email from UW Medicine pleaded my department for volunteers to help conduct COVID-19 tests due to unprecedented demand. Despite just completing the bioengineering PhD qualification exam, I could not sit tight and take the customary short post-exam break. Instead,<strong> I joined UW Medicine in the fight against COVID-19. </strong>The night after my exam, I biked to UW Medical Center to work under the Specimen Processing Services (SPS) and prepare COVID-19 samples for testing. Foege may be closed, but I returned to work! I worked alongside regular employees and travel nurses, sorting and labeling hundreds of specimen samples each night. Quickly mastering the processing steps for COVID-19 PCR tests, I also learned how to process specimen for more routine lab work and how to perform extra tasks, such as sending and receiving samples through the pneumatic tube system. Most importantly, I learned new things that I could take to my research. Tests were slow to process, sometimes taking a week to return results to patients. UW SPS and Virology were nearly at their maximum processing capabilities given that the PCR machines were back-ordered and even basic supplies were scarce. When my professor asked for a volunteer to help investigate DNA aptamers for binding SARS-CoV-2, I quickly offered my assistance even though I had not researched aptamers before. I saw an opportunity to apply aptamers to COVID-19 testing: <strong>if we developed aptamers for rapid lateral flow tests, the diagnosis would be ready in the matter of minutes unlike the PCR tests I handled.</strong> Although I spent time away from research, I laid the foundation to my PhD thesis work.</p></h4></div>
+                    <div class="col-md-4">
+                      <p><br><img src="assets/img/SPS-samples.jpg" width="454" height="605"><br>COVID-19 patient samples on dry ice await processing.</p></div>
                 </div>
 
             </div>
+        </div>
+    </section>
+
+    <section class="for-full-back for-parallax-two" id="Parallax-two">
+        <div class="container">
+
             <div class="row text-center">
-                <strong>ttt
-                        </strong>
+                <div class="col-md-8 col-md-offset-2 ">
+                <p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
+                </div>
+
             </div>
 
 
         </div>
     </section>
+
+    <section class="for-full-back color-white " id="test">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-12">
+                    <h1>My Story: COVID-19 Research</h1>
+                    <div class="col-mid-3">
+                      <p><br><img src="assets/img/SPS-samples.jpg" width="454" height="605"><br>COVID-19 patient samples on dry ice await processing.</p>
+                    </div>
+                    <div class="col-mid-5">
+                      <h4><p>Our lab investigates aptamers and applies them a range of fields, including cancer therapy and now COVID-19 diagnostics. Aptamers are short single-stranded DNA that can bind and recognize other molecules, such as cells and proteins. The aptamer's ability to bind is simialr to protein antibodies, but aptamers are cheaper to manufacture and can withstand larger ranges in temperature, buffer, and other conditions. We were interested in discovering aptamers that can bind the spike protein of SARS-CoV-2, which is the virus that causes COVID-19. Because SARS-CoV-2 research was very new at the time, we encountered many unexpected challenges while conducting the investigation. ____________ The collaboration resulted in my first first-author research publication, as well as ________. In addition, I presented this work at the 2021 Oligonucleotide Therapeutics Conference after being chosen among dozens of submissions. ____ [current directions: rapid test, what it does, advantages it could bring] All the while, I took under my wing a then-sophomore, Joey, to help support my work. [mentoring challenges, things I learned, good points?]</p></h4>
+                    </div>
+                </div>
+
+            </div>
+
+
+        </div>
+    </section>
+
+    <section class="for-full-back for-parallax-two" id="Parallax-two">
+        <div class="container">
+
+            <div class="row text-center">
+                <div class="col-md-8 col-md-offset-2 ">
+                <p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
+                </div>
+
+            </div>
+
+
+        </div>
+    </section>
+
+    <section class="for-full-back color-white " id="test">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-12">
+                    <h1>My Story: Laser-cutting</h1>
+                    <div class="col-mid-8">
+                      <h4><p>Just as I mentored Joey at the bench, I also trained Camille, a current junior at UW, as my shop assistant for my online store. [explain the store I created from scratch, what we make] [inclusivity, we are both young LGBT women in a field primarily dominated by men?]</p>
+                    <p>The online store helps fund my little brother’s husky experience. Robin is a senior at UW … Pay for his housing and every grocery trip and food outing we have together to give him the freedom to choose his own future, reduce any student debt that may weigh his choice of future directions, shield him from "tiger mom” judgement on his choice of major and career.</p></h4>
+                    </div>
+                    <div class="col-mid-3">
+                    <p>photo photo photo photo</p>
+                    </div>
+                </div>
+
+            </div>
+
+
+        </div>
+    </section>
+
+    <section class="for-full-back for-parallax-two" id="Parallax-two">
+        <div class="container">
+
+            <div class="row text-center">
+                <div class="col-md-8 col-md-offset-2 ">
+                <p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
+                </div>
+
+            </div>
+
+
+        </div>
+    </section>
+
+
+    <section class="for-full-back color-white " id="test">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-12">
+                    <h1>My Story: Kendo Club</h1>
+                    <div class="col-mid-3">
+                      <p>photos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photos</p>
+                    </div>
+                    <div class="col-mid-8">
+                      <h4><p>xxxx</p></h4>
+                    </div>
+                </div>
+
+            </div>
+
+
+        </div>
+    </section>
+
+    <section class="for-full-back for-parallax-two" id="Parallax-two">
+        <div class="container">
+
+            <div class="row text-center">
+                <div class="col-md-8 col-md-offset-2 ">
+                <p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
+                </div>
+
+            </div>
+
+
+        </div>
+    </section>
+
+    <section class="for-full-back color-white " id="test">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-12">
+                    <h1>My Story: Pok&eacute;mon</h1>
+                    <div class="col-mid-8">
+                      <h4><p>f</p></h4>
+                    </div>
+                    <div class="col-mid-3">
+                    <p>photo photo photo photo</p>
+                    </div>
+                </div>
+
+            </div>
+
+
+        </div>
+    </section>
+
+
 
 
     <!--./parallax two-->
@@ -408,7 +511,11 @@
         "name": "sewing and alterations for kendo uniforms and costuming",
         "color": "#e6f5c9"
       },
-
+      {
+        "id": 25,
+        "name": "laser-cutting mask accessory 'ear savers' for SPS co-workers",
+        "color": "#e6f5c9"
+      },
     ],
     links : [
       {
@@ -618,6 +725,14 @@
       {
         "source": 19,
         "target": 24
+      }, 
+      {
+        "source": 2,
+        "target": 25
+      },   
+      {
+        "source": 12,
+        "target": 25
       }, 
     ]
   }
