--- a/index.html
+++ b/index.html
@@ -53,11 +53,19 @@
                     </li>
                     <li><a href="#intro">INTRO</a>
                     </li>
-                    <li><a href="#dots">CONNECTING THE DOTS</a>
+                    <li><a href="#dots">DOTS</a>
                     </li>
-                    <li><a href="#story">STORY</a>
+                    <li><a href="#hospital">STORY:</a>
                     </li>
-                    <li><a href="mailto:lucyyang@uw.edu"><strong>e-mail: </strong>lucyyang@uw.edu</a>
+                    <li><a href="#hospital">1</a>
+                    </li>
+                    <li><a href="#research">2</a>
+                    </li>
+                    <li><a href="#lasercut">3</a>
+                    </li>
+                    <li><a href="#kendo">4</a>
+                    </li>
+                    <li><a href="#pokemon">5</a>
                     </li>
                 </ul>
             </div>
@@ -198,7 +206,7 @@
 
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2 ">
-                <p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
+                <p></p>
                 </div>
 
             </div>
@@ -208,13 +216,13 @@
     </section>
 
 
-    <section class="for-full-back color-white " id="story">
+    <section class="for-full-back color-white " id="hospital">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-12">
                     <h1>My Story: COVID-19 Testing</h1>
                     <div class="col-md-8">
-                    <h4><p>March 2020: a world shutting down. An email from UW Medicine pleaded my department for volunteers to help conduct COVID-19 tests due to unprecedented demand. Despite just completing the bioengineering PhD qualification exam, I could not sit tight and take the customary short post-exam break. Instead,<strong> I joined UW Medicine in the fight against COVID-19. </strong>The night after my exam, I biked to UW Medical Center to work under the Specimen Processing Services (SPS) and prepare COVID-19 samples for testing. Foege may be closed, but I returned to work! I worked alongside regular employees and travel nurses, sorting and labeling hundreds of specimen samples each night. Quickly mastering the processing steps for COVID-19 PCR tests, I also learned how to process specimen for more routine lab work and how to perform extra tasks, such as sending and receiving samples through the pneumatic tube system. Most importantly, I learned new things that I could take to my research. Tests were slow to process, sometimes taking a week to return results to patients. UW SPS and Virology were nearly at their maximum processing capabilities given that the PCR machines were back-ordered and even basic supplies were scarce. When my professor asked for a volunteer to help investigate DNA aptamers for binding SARS-CoV-2, I quickly offered my assistance even though I had not researched aptamers before. I saw an opportunity to apply aptamers to COVID-19 testing: <strong>if we developed aptamers for rapid lateral flow tests, the diagnosis would be ready in the matter of minutes unlike the PCR tests I handled.</strong> Although I spent time away from research, I laid the foundation to my PhD thesis work.</p></h4></div>
+                    <h4><p>March 2020: a world shutting down. An email from UW Medicine pleaded my department for volunteers to help conduct COVID-19 tests due to unprecedented demand. Despite just completing the bioengineering PhD qualification exam, I could not sit tight and take the customary short post-exam break. <strong>I was ready to tackle my next step. So, I joined UW Medicine in the fight against COVID-19. </strong>The night after my exam, I biked to UW Medical Center to work under the Specimen Processing Services (SPS) and prepare COVID-19 samples for testing. Foege may be closed, but I returned to work! I worked alongside regular employees and travel nurses, sorting and labeling hundreds of specimen samples each night. Quickly mastering the processing steps for COVID-19 PCR tests, I also learned how to process specimen for more routine lab work and how to perform extra tasks, such as sending and receiving samples through the pneumatic tube system. Most importantly, I learned new things that I could take to my research. Tests were slow to process, sometimes taking a week to return results to patients. UW SPS and Virology were nearly at their maximum processing capabilities given that the PCR machines were back-ordered and even basic supplies were scarce. When my professor asked for a volunteer to help investigate DNA aptamers for binding SARS-CoV-2, I quickly offered my assistance even though I had not researched aptamers before. I saw an opportunity to apply aptamers to COVID-19 testing: <strong>if we developed aptamers for rapid lateral flow tests, the diagnosis would be ready in the matter of minutes unlike the PCR tests I handled.</strong> Although I spent time away from research, I gained invaluable perception into COVID-19 testing and this laid the foundation to my PhD thesis work.</p></h4></div>
                     <div class="col-md-4">
                       <p><br><img src="assets/img/SPS-samples.jpg" width="454" height="605"><br>COVID-19 patient samples on dry ice await processing.</p></div>
                 </div>
@@ -223,12 +231,12 @@
         </div>
     </section>
 
-    <section class="for-full-back for-parallax-two" id="Parallax-two">
+    <section class="for-full-back for-parallax-three" id="Parallax-three">
         <div class="container">
 
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2 ">
-                <p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
+                <p></p>
                 </div>
 
             </div>
@@ -237,16 +245,16 @@
         </div>
     </section>
 
-    <section class="for-full-back color-white " id="test">
+    <section class="for-full-back color-white " id="research">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-12">
                     <h1>My Story: COVID-19 Research</h1>
-                    <div class="col-mid-3">
-                      <p><br><img src="assets/img/SPS-samples.jpg" width="454" height="605"><br>COVID-19 patient samples on dry ice await processing.</p>
+                    <div class="col-md-5">
+                      <p><br><img src="assets/img/lab-test.jpg" width="454" height="605"><br>Applying AptaFlow to a test sample.</p>
                     </div>
-                    <div class="col-mid-5">
-                      <h4><p>Our lab investigates aptamers and applies them a range of fields, including cancer therapy and now COVID-19 diagnostics. Aptamers are short single-stranded DNA that can bind and recognize other molecules, such as cells and proteins. The aptamer's ability to bind is simialr to protein antibodies, but aptamers are cheaper to manufacture and can withstand larger ranges in temperature, buffer, and other conditions. We were interested in discovering aptamers that can bind the spike protein of SARS-CoV-2, which is the virus that causes COVID-19. Because SARS-CoV-2 research was very new at the time, we encountered many unexpected challenges while conducting the investigation. ____________ The collaboration resulted in my first first-author research publication, as well as ________. In addition, I presented this work at the 2021 Oligonucleotide Therapeutics Conference after being chosen among dozens of submissions. ____ [current directions: rapid test, what it does, advantages it could bring] All the while, I took under my wing a then-sophomore, Joey, to help support my work. [mentoring challenges, things I learned, good points?]</p></h4>
+                    <div class="col-md-7">
+                      <h4><p>Our lab investigates aptamers and applies them a range of fields, including cancer therapy and now COVID-19 diagnostics. Aptamers are short single-stranded DNA that can bind and recognize other molecules, such as cells and proteins. The aptamer's ability to bind is similar to protein antibodies, but aptamers are cheaper to manufacture and can withstand larger ranges in temperature, buffer, and other conditions. These are key features that can make an aptamer-based lateral flow test cheaper and more convenient to use! We were interested in discovering aptamers that can bind the spike protein of SARS-CoV-2, which is the virus that causes COVID-19. Because SARS-CoV-2 research was very new at the time, we encountered many unexpected challenges while conducting the investigation, not to mention that I was new to the world of aptamers. For example, I encountered issues in the aptamer discovery process and nuances in the spike protein's structure. Despite this, I helped bring our research to fruition: Last summer, I co-authored our first publication on SARS-CoV-2 aptamers and presented my work at the 2021 Oligonucleotide Therapeutics Conference, which selected only five young scientist presenters in a competitive application process. Thanks to my adaptability, I've been able to find opportunities within obstacles and elevate my research further. Right now, I'm applying aptamers to lateral flow- and electrochemical-based detection of SARS-CoV-2. During this project, I also mentored UW bioengineering junior Joey to support my project and further his research career. [relevant examples, 1 or 2 sentences?]. Jeoy and I still have more work ahead of us, but his efforts are already being recognized. He won the Mary Gates Fellowship award and I ____.</p></h4>
                     </div>
                 </div>
 
@@ -256,12 +264,12 @@
         </div>
     </section>
 
-    <section class="for-full-back for-parallax-two" id="Parallax-two">
+    <section class="for-full-back for-parallax-four" id="Parallax-four">
         <div class="container">
 
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2 ">
-                <p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
+                <p></p>
                 </div>
 
             </div>
@@ -270,17 +278,19 @@
         </div>
     </section>
 
-    <section class="for-full-back color-white " id="test">
+    <section class="for-full-back color-white " id="lasercut">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-12">
                     <h1>My Story: Laser-cutting</h1>
-                    <div class="col-mid-8">
-                      <h4><p>Just as I mentored Joey at the bench, I also trained Camille, a current junior at UW, as my shop assistant for my online store. [explain the store I created from scratch, what we make] [inclusivity, we are both young LGBT women in a field primarily dominated by men?]</p>
-                    <p>The online store helps fund my little brother’s husky experience. Robin is a senior at UW … Pay for his housing and every grocery trip and food outing we have together to give him the freedom to choose his own future, reduce any student debt that may weigh his choice of future directions, shield him from "tiger mom” judgement on his choice of major and career.</p></h4>
+                    <div class="col-md-6">
+                      <h4><p>Just as I mentored Joey at the bench, I also trained UW design junior Camille as my shop assistant for my online store. Several years ago, I started my own small business to sell laser-cut items, such as keychains, coasters, game token sets, display cases, costume props, and more. As orders grew to the tune of hundreds per month, I taught Camille how to prepare products and ship orders while also managing both of our schedules to meet client expectations and shipping deadlines. I gained valuable experience in how to manage a trainee, which came in handy when I had to search for and manage an undergrad at lab. Most importantly, laser-cutting is my creative outlet and it has touched all facets of my life experiences. I'm constantly thinking of things I can make to improve a process in lab or help ______. For example, for my SPS co-workers I made "ear savers" , which alleviate pain associated with long-term mask-wearing. I make handy items for use around in lab, including acrylic storage boxes and lab key tags. Sometimes, I make something just for fun inspired by my other experiences, such as biologically-accurate cell coasters (they make superb gifts for research collaborators!) and LED-lit acrylic prop katanas (as seen in the first photo.)</p>
+                    </h4></div>
+                    <div class="col-md-5">
+                    <p><br><img src="assets/img/shop2.jpg" width="605" height="454"><br>My artist booth at Seattle's Anthro Northwest 2019 convention</p>
                     </div>
-                    <div class="col-mid-3">
-                    <p>photo photo photo photo</p>
+                    <div class="col-md-12"><h4>
+                    <p>My laser-cutting venture also helps fund my little brother Robin's husky experience. Robin is now a UW senior and his out-of-state tuition bill may put him in long-term debt. As an effort to free him from choosing his major and career path based on income, I put Robin's needs ahead of my comforts. Since fall 2018 when we both started at UW, I've been paying for the majority of his expenses, including housing, utilities, and food. I'm proud that he accomplished his goal of becoming a design major, and look forward to how Robin will ______.</p></h4>
                     </div>
                 </div>
 
@@ -290,12 +300,12 @@
         </div>
     </section>
 
-    <section class="for-full-back for-parallax-two" id="Parallax-two">
+    <section class="for-full-back for-parallax-five" id="Parallax-five">
         <div class="container">
 
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2 ">
-                <p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
+                <p></p>
                 </div>
 
             </div>
@@ -305,16 +315,17 @@
     </section>
 
 
-    <section class="for-full-back color-white " id="test">
+    <section class="for-full-back color-white " id="kendo">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-12">
                     <h1>My Story: Kendo Club</h1>
-                    <div class="col-mid-3">
-                      <p>photos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photosphotos photos</p>
+                    <div class="col-md-5">
+                      <p><br><img src="assets/img/kendo-placeholder.jpg" width="454" height="605"><br>placeholder</p>
                     </div>
-                    <div class="col-mid-8">
-                      <h4><p>xxxx</p></h4>
+                    <div class="col-md-7">
+                      <h4><p>My husky experience doesn’t end at the bioengineering department; I’m also deeply involved in two communities at UW, the Kendo Club and the competitive Pokémon scene. Kendo Club at UW. [kendo/iaido summary] [kendo rank] [online practices] [helped with making items for the fall club fair, give rides to undergrads who need it? Teach newer students?] [culminating in obtaining rank in iaido?] [wrap up]
+                      </p></h4>
                     </div>
                 </div>
 
@@ -324,12 +335,12 @@
         </div>
     </section>
 
-    <section class="for-full-back for-parallax-two" id="Parallax-two">
+    <section class="for-full-back for-parallax-six" id="Parallax-six">
         <div class="container">
 
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2 ">
-                <p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
+                <p></p>
                 </div>
 
             </div>
@@ -338,16 +349,18 @@
         </div>
     </section>
 
-    <section class="for-full-back color-white " id="test">
+    <section class="for-full-back color-white " id="pokemon">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-12">
                     <h1>My Story: Pok&eacute;mon</h1>
-                    <div class="col-mid-8">
-                      <h4><p>f</p></h4>
+                    <div class="col-md-6">
+                      <h4><p>For the UW community, Seattle community, and beyond, I organize and staff official Pok&eacute;mon events for the trading card game and video game. Local events at places like MOX Boarding House are hosted by members of the Pok&eacute;mon Professor program, which background checks and certifies volunteers to organize and judge events. I organize and host casual open play and competitive tournaments for both the trading card game and the video game. <strong>When I first moved to Seattle at the beginning of my PhD, I saw an opportunity to kindle the local Pok&eacute;mon scene at the UW.</strong> There was no local host for the video game, and only two local game stores in Seattle that hosted card game events. So, I hosted weekly open-play events in the U District's The Dreaming Comics and Games (now closed), and also at MOX Boarding House Seattle. I organized the only officially sanctioned video game tournaments in Seattle, bringing in UW students, Portland residents, and even Canadians together for Pok&eacute;mon battles. Thanks to my ample local experience, I applied and was accepted as a staff member for regional large tournaments in Portland, Anaheim, Dallas, and other major cities. Attracting hundreds of Pok&eacute;mon players across the country vying for cash prizes, these tournaments also brought in seasoned Pok&eacute;mon Professors as judges. I not only learned useful teamwork skills, but also occasionally was chosen to lead judge teams. ______ <strong>Although in-person event were and remain canceled due to COVID-19, I persisted in contributing to the community through virtual means.</strong> Due to my previous experience hosting Seattle events and volunteering at large tournaments, I was chosen to judge and head judge for the only official online Pok&eacute;mon circuit.
+                    </p></h4>
                     </div>
-                    <div class="col-mid-3">
-                    <p>photo photo photo photo</p>
+                    <div class="col-md-6">
+                    <p><br><img src="assets/img/pokemon-judge-lucy.jpg" width="583" height="389"><br>Judging video game players at the 2019 Santa Clara Regionals<br><img src="assets/img/pokemon-staff-pc2.png" width="583" height="303"><br>Staff "photo" for the online Player's Cup II
+                    </p>
                     </div>
                 </div>
 
@@ -357,7 +370,19 @@
         </div>
     </section>
 
+    <section class="for-full-back for-parallax-seven" id="Parallax-seven">
+        <div class="container">
 
+            <div class="row text-center">
+                <div class="col-md-8 col-md-offset-2 ">
+                <br><br><br><br><br><br><h6>As my fellow huskies wait to cross swords and battle with Pokémon in-person safely, I hope to accelerate our return to normal through COVID-19 research. </h6>
+                </div>
+
+            </div>
+
+
+        </div>
+    </section>
 
 
     <!--./parallax two-->
