--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- CUSTOM STYLE CSS -->
     <link href="assets/css/style.css" rel="stylesheet" />
     <!-- GOOGLE FONT -->
-    <link href='fonts.googleapis.com/css?family=Ruluko' rel='stylesheet' type='text/css' />
+    <link href='http://fonts.googleapis.com/css?family=Ruluko' rel='stylesheet' type='text/css' />
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -325,8 +325,6 @@
                     </div>
                     <div class="col-md-7">
                       <h4><p>My husky experience doesn’t end at the bioengineering department; I’m also deeply involved in two communities at UW, the Kendo Club and the competitive Pokémon scene. Kendo Club at UW. [kendo/iaido summary] [kendo rank] [online practices] [helped with making items for the fall club fair, give rides to undergrads who need it? Teach newer students?] [culminating in obtaining rank in iaido?] [wrap up]
-
-                        font fixed yet?
                       </p></h4>
                     </div>
                 </div>
