--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     <!-- CUSTOM STYLE CSS -->
     <link href="assets/css/style.css" rel="stylesheet" />
     <!-- GOOGLE FONT -->
+  <!--
     <link href='http://fonts.googleapis.com/css?family=Ruluko' rel='stylesheet' type='text/css' />
+  -->
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -44,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="http://web.mit.edu/beast/www/">LUCY YANG HUSKY 100 APPLICATION</a>
+                <a class="navbar-brand">LUCY YANG HUSKY 100 APPLICATION</a>
             </div>
             <!-- Collect the nav links for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -251,10 +253,10 @@
                 <div class="col-md-12">
                     <h1>My Story: COVID-19 Research</h1>
                     <div class="col-md-5">
-                      <p><br><img src="assets/img/lab-test.jpg" width="454" height="605"><br>Applying AptaFlow to a test sample.</p>
+                      <p><br><img src="assets/img/lab-test.jpg" width="454" height="605"><br>Applying AptaFlow to a test sample. (To be replaced with something more exciting)</p>
                     </div>
                     <div class="col-md-7">
-                      <h4><p>Our lab investigates aptamers and applies them a range of fields, including cancer therapy and now COVID-19 diagnostics. Aptamers are short single-stranded DNA that can bind and recognize other molecules, such as cells and proteins. The aptamer's ability to bind is similar to protein antibodies, but aptamers are cheaper to manufacture and can withstand larger ranges in temperature, buffer, and other conditions. These are key features that can make an aptamer-based lateral flow test cheaper and more convenient to use! We were interested in discovering aptamers that can bind the spike protein of SARS-CoV-2, which is the virus that causes COVID-19. Because SARS-CoV-2 research was very new at the time, we encountered many unexpected challenges while conducting the investigation, not to mention that I was new to the world of aptamers. For example, I encountered issues in the aptamer discovery process and nuances in the spike protein's structure. Despite this, I helped bring our research to fruition: Last summer, I co-authored our first publication on SARS-CoV-2 aptamers and presented my work at the 2021 Oligonucleotide Therapeutics Conference, which selected only five young scientist presenters in a competitive application process. Thanks to my adaptability, I've been able to find opportunities within obstacles and elevate my research further. Right now, I'm applying aptamers to lateral flow- and electrochemical-based detection of SARS-CoV-2. During this project, I also mentored UW bioengineering junior Joey to support my project and further his research career. [relevant examples, 1 or 2 sentences?]. Jeoy and I still have more work ahead of us, but his efforts are already being recognized. He won the Mary Gates Fellowship award and I ____.</p></h4>
+                      <h4><p>Our lab investigates aptamers and applies them a range of fields, including cancer therapy and now COVID-19 diagnostics. Aptamers are short single-stranded DNA that can bind and recognize other molecules, such as cells and proteins. The aptamer's ability to bind is similar to protein antibodies, but aptamers are cheaper to manufacture and can withstand larger ranges in temperature, buffer, and other conditions. These are key features that can make an aptamer-based lateral flow test cheaper and more convenient to use. <strong>To develop these test strips, we enrich for and characterize aptamers that can bind the spike protein of SARS-CoV-2</strong>, the virus that causes COVID-19. Because SARS-CoV-2 research was very new at the time, we encountered many unexpected challenges while conducting the investigation, not to mention that I was new to the world of aptamers. For example, I encountered issues in the aptamer discovery process and nuances in the spike protein's structure. Despite this, I helped bring our research to fruition: Last summer, I co-authored our first publication on SARS-CoV-2 aptamers and presented my work at the 2021 Oligonucleotide Therapeutics Conference, which selected only five young scientist presenters in a competitive application process. <strong>Thanks to my persistence and adaptability, I've been able to find opportunities within obstacles and share my research with the scientific community.</strong> During this project, I also mentored UW bioengineering junior Joey to support my project and further his own research career. After I taught him key protocols, Joey was quickly able to conduct independent research and perform crucial experiments for SARS-CoV-2 aptamers. Joey and I still have more work ahead of us, but his efforts are already being recognized. Joey received the Mary Gates Research Scholarship this past quarter, and I'm proud to continue to cultivate his scientific abilities for months to come.</p></h4>
                     </div>
                 </div>
 
@@ -284,7 +286,7 @@
                 <div class="col-md-12">
                     <h1>My Story: Laser-cutting</h1>
                     <div class="col-md-6">
-                      <h4><p>Just as I mentored Joey at the bench, I also trained UW design junior Camille as my shop assistant for my online store. Several years ago, I started my own small business to sell laser-cut items, such as keychains, coasters, game token sets, display cases, costume props, and more. As orders grew to the tune of hundreds per month, I taught Camille how to prepare products and ship orders while also managing both of our schedules to meet client expectations and shipping deadlines. I gained valuable experience in how to manage a trainee, which came in handy when I had to search for and manage an undergrad at lab. Most importantly, laser-cutting is my creative outlet and it has touched all facets of my life experiences. I'm constantly thinking of things I can make to improve a process in lab or help ______. For example, for my SPS co-workers I made "ear savers" , which alleviate pain associated with long-term mask-wearing. I make handy items for use around in lab, including acrylic storage boxes and lab key tags. Sometimes, I make something just for fun inspired by my other experiences, such as biologically-accurate cell coasters (they make superb gifts for research collaborators!) and LED-lit acrylic prop katanas (as seen in the first photo.)</p>
+                      <h4><p>Just as I mentored Joey at the bench, I also trained UW design junior Camille as my online store apprentice. I started my own small business for selling laser-cut items, such as keychains, coasters, game token sets, display cases, costume props, and more. <strong>As orders grew to the tune of hundreds per month, I taught my assistant how to prepare products and ship orders while also managing both of our schedules to meet client deadlines.</strong> I gained valuable experience in how to manage a trainee, which came in handy when I had to search for and manage an undergrad in the lab. Most importantly, creative applications for laser-cutting are constantly on my mind and it has touched all facets of my life experiences. For example, for my SPS co-workers I crafted "ear savers" , which alleviate pain associated with long-term mask-wearing. I create handy items for use around in lab, including acrylic storage boxes and lab key tags. Sometimes, I whip up something inspired by my other experiences, such as biologically-accurate cell coasters (they make superb gifts for research collaborators!) and LED-lit acrylic prop katanas (as seen in the first photo.)</p>
                     </h4></div>
                     <div class="col-md-5">
                     <p><br><img src="assets/img/shop2.jpg" width="605" height="454"><br>My artist booth at Seattle's Anthro Northwest 2019 convention</p>
@@ -324,7 +326,7 @@
                       <p><br><img src="assets/img/kendo-placeholder.jpg" width="454" height="605"><br>placeholder</p>
                     </div>
                     <div class="col-md-7">
-                      <h4><p>My husky experience doesn’t end at the bioengineering department; I’m also deeply involved in two communities at UW, the Kendo Club and the competitive Pokémon scene. Kendo Club at UW. [kendo/iaido summary] [kendo rank] [online practices] [helped with making items for the fall club fair, give rides to undergrads who need it? Teach newer students?] [culminating in obtaining rank in iaido?] [wrap up]
+                      <h4><p>My husky experience doesn’t end at the bioengineering department; I’m also deeply involved in two communities at UW, the Kendo Club and the competitive Pokémon scene. Kendo Club at UW. [kendo/iaido summary] [kendo rank] [online practices] [helped with making items for the fall club fair, give rides to undergrads who need it? Teach newer students?] [culminating in obtaining rank in iaido?] [wrap up] gg
                       </p></h4>
                     </div>
                 </div>
